# sysfetch-rs

./: Cargo.toml  README.md
src/: app.rs  logo.rs  system_info.rs  ui.rs
